JSW Devsb/src/objects/Actuals__c.object
<CustomObject>
    <fields>
        <fullName>Actuals__c</fullName>
        <label>Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Code__c</fullName>
        <label>Customer Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <label>Employee ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nature__c</fullName>
        <label>Nature</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Promoter__c</fullName>
        <label>Sales Promoter</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Start_Date__c</fullName>
        <label>Target Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GGBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institution</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <formula>Year__c +&apos;:&apos;+ Month__c +&apos;:&apos;+ Distribution_Channel__c +&apos;:&apos;+ Customer_Code__c +&apos;:&apos;+ Sales_Promoter__c +&apos;:&apos;+ Product_Group__c</formula>
        <label>Unique ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Actuals</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Actuals__c</columns>
        <columns>Unique_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ACTL-{0000000000}</displayFormat>
        <label>Actuals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actuals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>